# pricy-backend

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt  scaffold.py
alembic/: env.py
alembic/versions/: 1f44cf514154_ajout_de_alias_dans_la_table_.py  5cc212f12473_ajout_de_packagings_id_et_measure_unit_.py  8939f2f87e2f_test_table.py  bd69fcb99cac_send_of_first_mgrations.py  f36dc51cdd83_changement_du_type_du_mot_de_passe_de_.py
app/common/: __init__.py
app/common/configs/: database.py  global_constants.py  security.py  settings.py
app/common/models/: Location.py  Organization.py  Permission.py  Product.py  ProductCatalogue.py  ProductPackaging.py  ProductStock.py  Role.py  RolePermission.py  StockMouvmentHistory.py  Supply.py  SupplyItem.py  TestModel.py  UserAccount.py  Warehouse.py  __init__.py
app/services/authentification_manager/: __init__.py  constants.py  dependencies.py  handler.py  helper.py  router.py  schemas.py
app/services/iam_manager/: __init__.py  constants.py  dependencies.py  handler.py  helper.py  router.py  schemas.py
app/services/organization_manager/: __init__.py  constants.py  dependencies.py  handler.py  helper.py  router.py  schemas.py
app/services/product_manager/: __init__.py  constants.py  dependencies.py  handler.py  helper.py  router.py  schemas.py
app/services/service_test/: __init__.py  constants.py  dependencies.py  handler.py  helper.py  router.py  schemas.py
app/services/stock_manager/: __init__.py  constants.py  dependencies.py  handler.py  helper.py  router.py  schemas.py
(+6 files in other folders)
