[project]
name = "pricy-backend"
version = "0.1.0"
description = "depot de gestion d'entreprise"
authors = [{ name = "therrynganga5@gmail.com" }]
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.136.0,<0.137.0",
    "uvicorn[standard]>=0.46.0,<0.47.0",
    "sqlalchemy>=2.0.49,<3.0.0",
    "alembic>=1.18.4,<2.0.0",
    "pydantic[email]>=2.13.3,<3.0.0",
    "pydantic-settings>=2.14.0,<3.0.0",
    "python-dotenv>=1.2.2,<2.0.0",
    "psycopg2-binary>=2.9.12,<3.0.0",
    "psycopg[binary]>=3.3.3,<4.0.0",
    "asyncpg>=0.31.0,<0.32.0",
    "redis>=7.4.0,<8.0.0",
    "httpx>=0.28.1,<0.29.0",
    "email-validator>=2.3.0,<3.0.0",
    "bcrypt>=5.0.0,<6.0.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mypy (>=1.20.2,<2.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "ruff (>=0.15.11,<0.16.0)"
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]